--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,46 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                
+                <h4 class="card-title">
+                    Barra de Progreso
+                </h4>
+                
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+                            [attr.aria-valuenow]="porcentaje1" aria-valuemin="0" aria-valuemax="100" [style.width] = "porcentaje1 + '%'"></div>
+                </div>
+                <br>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" 
+                            [attr.aria-valuenow]="porcentaje2" aria-valuemin="0" aria-valuemax="100" [style.width] = "porcentaje2 + '%'"></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-increment (eventEmitter)="porcentaje1 = $event" nombre="Barra Azul" [porcentaje]="porcentaje1"></app-increment>
+
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-increment (eventEmitter)="porcentaje2 = $event" nombre="Barra Verde" [porcentaje]="porcentaje2"></app-increment>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
